Fix scroll overflow on desktop

--- a/src/templates/styles.css
+++ b/src/templates/styles.css
@@ -1,3 +1,9 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 .card {
   display: flex;
   width: 100%;
@@ -10,7 +16,7 @@
   font-size: 26px;
   text-align: center;
   color: #333333;
-  background-color:white;
+  background-color: white;
   padding: 20px 0;
 }
 
